k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mexoms
  labels:
    name: mexoms
    environment: production
